# flashlight

./: CMakeLists.txt
cmake/: BuildKenlm.cmake
flashlight/app/asr/data/: FeatureTransforms.h
flashlight/common/: Utils.cpp
flashlight/fl/: CMakeLists.txt
flashlight/fl/autograd/backend/cpu/: DnnlUtils.cpp
flashlight/fl/common/: Defines.h  Logging.cpp  Utils.cpp
flashlight/fl/dataset/: MemoryBlobDataset.cpp  Utils.cpp
flashlight/fl/distributed/: CMakeLists.txt
flashlight/lib/audio/feature/: CMakeLists.txt  PowerSpectrum.cpp  PowerSpectrum.h  SpeechUtils.cpp
flashlight/lib/common/: String.h
